--- a/css/main.css
+++ b/css/main.css
@@ -180,19 +180,11 @@ aside {
   flex-flow: row wrap;
 }
 
-aside h3 {
-  Padding: 20px 0;
-}
 
-aside p {
-  padding-bottom: 30px;
-}
-
-aside .form {
-  padding: 1em;
-  margin-top: 20px ;
-  margin-bottom: 50px;
-}
+/*my errors when comparing to solution code 
+* I added padding for aside h3, p, .form
+*
+/
 
 /* Features */
 
@@ -222,14 +214,11 @@ aside .form {
   flex-flow: row wrap;
 }
 
-.features .features-icon {
-  padding-top: 30px;
-  padding-bottom: 40px;
-}
 
-.features .features-item-description {
- padding-bottom: 30px;
-}
+/*my errors when comparing to solution code 
+* I added padding for .features .features-icon, .features-item-description
+*
+/
 
 /* Reviews */
 
@@ -371,16 +360,156 @@ aside .form {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+@media only screen and (min-width: 768px) {
+  /*Tablet styles here*/
+}
+/*General styles*/
+
+.content-wrapper {
+  max-width: 640px;
+  margin: 100px 0;
 }
 
-@media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
+/* Header */
+
+header {
+ justify-content: space-around;
+ padding: 33px 0;
 }
+
+header .content-wrapper {
+ width: 100%;
+ justify-content: space-between;
+
+}
+
+header nav {
+  width: 20%;
+}
+
+header nav ul {
+  justify-content: space-between;
+}
+
+.header-divider {
+ display: none;
+}
+
+/* Hero Area */
+
+/* Aside */
+
+aside .content-wrapper {
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row wrap;
+  margin: 50px 0;
+}
+
+aside .content-wrapper .form-description, 
+aside .content-wrapper .form {
+ width: 40%;
+ margin: 0;
+}
+
+/* Features */
+
+.features article {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column wrap;
+  flex-basis: 50%;
+  
+}
+
+.features .features-item-description {
+ width: 50%;
+}
+
+/* Reviews */
+
+.reviews article {
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.reviews article div {
+ width: 50%;
+}
+
+
+/* Footer */
+
+footer .content-wrapper {
+  width: 65%;
+  margin: 100px 0;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer .contact {
+  margin-bottom: 0;
+}
+
+footer .copyright {
+  width: 100%;
+}
+
+/* ==========================================================================
+   About Page
+========================================================================== */
+
+.mission-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 20px;
+}
+
+.mission-content p {
+  width: 46%;
+}
+
+.contact-section .contact-wrapper h2 {
+  width: 80%;
+}
+
+.contact-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+
+/* ==========================================================================
+   FAQ Page
+ ========================================================================== */
+
+ .faq .content-wrapper {
+  justify-content: space-between;
+ }
+
+ .faq-content {
+  flex-basis: 45%;
+ }
+
+ .faq h2 {
+  width: 100%;
+ }
+
+
+
+
+@media only screen and (min-width: 12000px) {
+  /*Desktop styles here*/
+}
+
 
 /* ==========================================================================
    Print styles.
