--- a/css/main.css
+++ b/css/main.css
@@ -86,10 +86,65 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-   .content-wrapper {
-    width: 90%;
-    padding: 50px 0;
-  }
+/* General Styles */
+ 
+html {
+	font-size: 1rem;
+}
+ 
+body {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1em;
+ 
+}
+ 
+ul, 
+ol {
+  list-style: none;
+ 
+}
+ 
+a {
+  color: #e2e3ed;
+  text-decoration: none;
+	
+}
+ 
+h2 {
+ font-family: 'Poppins', sans-serif;
+ font-size: 1.875em;
+ font-weight: 500;
+}
+ 
+h3, 
+h4 {
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.125em;
+  font-weight: 500;
+}
+ 
+p {
+  font-size: 0.875em;
+	line-height: 18px;
+}
+ 
+img {
+ 
+}
+ 
+figure {
+ 
+}
+ 
+address {
+  font-style: normal; 
+ 
+}
+ 
+.content-wrapper {
+ width: 90%;
+ margin: 50px 0;
+}
 /*-------------------- Base Header - Footer Styles -------------------- */
 
 header,
