--- a/css/main.css
+++ b/css/main.css
@@ -95,12 +95,16 @@ html {
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 1em;
+  color: #e2e3ed;
+  text-align: left;
  
 }
  
 ul, 
 ol {
   list-style: none;
+  margin: 0;
+  padding: 0;
  
 }
  
@@ -121,11 +125,12 @@ h4 {
   font-family: 'Poppins', sans-serif;
   font-size: 1.125em;
   font-weight: 500;
+  margin: 20px 0;
 }
  
 p {
   font-size: 0.875em;
-	line-height: 18px;
+	line-height: 1.285em;
 }
  
 img {
@@ -147,16 +152,11 @@ address {
 }
 /*-------------------- Base Header - Footer Styles -------------------- */
 
-header,
-footer {
+header {
     display: flex;
     justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-}
-
-header {
-  padding: 15px 0;
+    background-color: #202322;
+    padding: 15px 0;  
 }
 
 header .content-wrapper {
@@ -171,14 +171,14 @@ header .content-wrapper {
   width: 100%;
   height: 1px;
   margin: 10px 0 20px 0;
+  background-color: #3a3a3a;
 }
 
 header nav {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-flow: row wrap;
   width: 60%;
+  font-size: 1.125em;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 header nav ul {
@@ -187,12 +187,24 @@ header nav ul {
   width: 100%;
 }
 
+header nav ul li {
+  font-size: 1.125em;
+}
+
 footer {
+  display: flex;
   flex-direction: column;
+  align-items: center;
+  text-align: center;
+  background-color: #202322;
 }
 
 footer p {
   margin: 0;
+}
+
+footer .content-wrapper {
+  width: 55%;
 }
 
 footer .social-icons {
@@ -207,13 +219,9 @@ footer .social-icons p {
   align-items: center;
 }
 
-footer .content-wrapper {
-  width: 55%;
-  margin: 50px 0;
-}
-
-.copyright {
-  padding: 20px 0;
+footer .copyright {
+ margin: 20px 0;
+  
 }
 
 
@@ -224,37 +232,61 @@ footer .content-wrapper {
 .hero-area {
   display: flex;
   justify-content: center;
-  flex-flow: row wrap;
+}
+
+.hero-area h1 {
+  font-size: 2.25em;
+  font-family: 'Poppins', Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  line-height: 1.2;
 }
 
 /* Aside */
 aside {
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
+  background-color: #527158;
+  color: #e2e3ed;
+
 }
 
+aside .form {
+  margin-top: 30px;
+}
 
-/*my errors when comparing to solution code 
-* I added padding for aside h3, p, .form
-*
-/
+/* Homepage User Submitted Info */
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+  padding: 1em;
+}
+ 
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
+}
+
 
 /* Features */
 
 .features {
   display: flex;
   justify-content: center;
-  flex-flow: row wrap;
 }
 
 .features h2 {
  margin-bottom: 60px;
-}
-
-.features p {
-  margin: 0;
 }
 
 .features article {
@@ -265,67 +297,81 @@ aside {
 .features .features-items {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   flex-flow: row wrap;
 }
 
+.features p {
+  margin: 0;
+  text-align: center;
+}
 
-/*my errors when comparing to solution code 
-* I added padding for .features .features-icon, .features-item-description
-*
-/
 
 /* Reviews */
 
 .reviews {
   display: flex;
   justify-content: center;
-  flex-flow: row wrap;
+  background-color: #2a423a;
+
 }
 
 .reviews h2 {
   margin-bottom: 40px;
+  line-height: 1;
 }
 
 .reviews h3 {
-  width: 52%;
+  width: 55%;
   margin: 20px 0;
 }
+
+
 /*-----------------About Page Styles---------------------*/
 
 .mission {
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
+  background-color: #527158;
 }
 
 .contact-section {
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
+  background-color: #2a423a;
+}
+
+.contact-content p {
+  margin: 0;
 }
 
 /*-----------------FAQ Page Styles---------------------*/
 .faq {
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
-
+  background-color: #527158;
 }
 
 .faq .content-wrapper {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   flex-flow: row wrap;
+  margin: 50px 0 0 0;
 }
 
+.faq h2 {
+  margin-bottom: 40px;
+  line-height: 1;
+}
 
+.faq-content {
+  margin-bottom: 50px;
+}
 
-
+.faq-content h4 {
+  line-height: 1.333;
+}
 
 /* ==========================================================================
    Helper classes
