--- a/css/main.css
+++ b/css/main.css
@@ -133,12 +133,12 @@ p {
 	line-height: 1.285em;
 }
  
-img {
- 
+img { 
+	width: 100%;
 }
  
 figure {
- 
+    margin: 0;
 }
  
 address {
@@ -159,6 +159,10 @@ header {
     padding: 15px 0;  
 }
 
+header figure {
+  width: 60%;
+}
+
 header .content-wrapper {
   display: flex;
   justify-content: center;
@@ -166,6 +170,7 @@ header .content-wrapper {
   flex-flow: row wrap;
   margin: 0;
 }
+
 
 .header-divider {
   width: 100%;
@@ -232,7 +237,12 @@ footer .copyright {
 .hero-area {
   display: flex;
   justify-content: center;
+  background-image: url('../img/unplugged-retreat.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
+
 
 .hero-area h1 {
   font-size: 2.25em;
@@ -240,6 +250,7 @@ footer .copyright {
   font-weight: 500;
   line-height: 1.2;
 }
+
 
 /* Aside */
 aside {
@@ -282,7 +293,9 @@ input[type=button] {
 
 .features {
   display: flex;
-  justify-content: center;
+  justify-content: center; 
+  background: url('../img/unplugged-retreat-features.jpg') center no-repeat #333;
+  background-size: cover;
 }
 
 .features h2 {
@@ -316,6 +329,10 @@ input[type=button] {
 
 }
 
+.reviews figure {
+  width: 100%;
+}
+
 .reviews h2 {
   margin-bottom: 40px;
   line-height: 1;
@@ -324,6 +341,15 @@ input[type=button] {
 .reviews h3 {
   width: 55%;
   margin: 20px 0;
+}
+
+
+
+.reviews article {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 
@@ -463,7 +489,7 @@ input[type=button] {
 
 @media only screen and (min-width: 768px) {
   /*Tablet styles here*/
-}
+
 /*General styles*/
 
 .content-wrapper {
@@ -471,10 +497,29 @@ input[type=button] {
   margin: 100px 0;
 }
 
+h2 {
+  font-size: 2.25em;
+  line-height: 1.333;
+}
+
+h3 {
+  font-size: 1.5em;
+  line-height: 1.25;
+}
+
+h2 {
+  font-size: 2.25em;
+  line-height: 1.333;
+}
+
+h3 {
+  font-size: 1.5em;
+  line-height: 1.25;
+}
+
 /* Header */
 
 header {
- justify-content: space-around;
  padding: 33px 0;
 }
 
@@ -482,6 +527,10 @@ header .content-wrapper {
  width: 100%;
  justify-content: space-between;
 
+}
+
+header figure {
+  width: 30%;
 }
 
 header nav {
@@ -498,12 +547,22 @@ header nav ul {
 
 /* Hero Area */
 
+.hero-area {
+  min-height: 600px;
+}
+
+.hero-area h1 {
+  font-size: 3em;
+  line-height: 1;
+  margin: 0;
+}
+
 /* Aside */
 
 aside .content-wrapper {
   display: flex;
   justify-content: space-between;
-  flex-flow: row wrap;
+  align-content: flex-start;
   margin: 50px 0;
 }
 
@@ -515,6 +574,10 @@ aside .content-wrapper .form {
 
 /* Features */
 
+.features h2 {
+  margin-bottom: 20px;
+}
+
 .features article {
   display: flex;
   justify-content: center;
@@ -525,7 +588,7 @@ aside .content-wrapper .form {
 }
 
 .features .features-item-description {
- width: 50%;
+ width: 62%;
 }
 
 /* Reviews */
@@ -533,13 +596,21 @@ aside .content-wrapper .form {
 .reviews article {
   display: flex;
   justify-content: space-between;
-
 }
 
+.reviews h2 {
+  width: 85%;
+}
+
+.reviews article figure,
 .reviews article div {
- width: 50%;
+  width: 49%;
 }
 
+.reviews h3 {
+  width: 75%;
+  margin: 0;
+}
 
 /* Footer */
 
@@ -552,16 +623,25 @@ footer .content-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-direction: row;
 }
 
 footer .contact {
   margin-bottom: 0;
 }
 
+footer h4 {
+  font-size: 1.5em;
+  margin-bottom: 40px;
+}
+
+footer p {
+  line-height: 1.285;
+}
 footer .copyright {
   width: 100%;
 }
-
+}
 /* ==========================================================================
    About Page
 ========================================================================== */
@@ -587,6 +667,10 @@ footer .copyright {
   align-items: flex-start;
 }
 
+.contact-content h4 {
+  font-size: 1.5em;
+}
+
 
 /* ==========================================================================
    FAQ Page
@@ -604,6 +688,11 @@ footer .copyright {
   width: 100%;
  }
 
+.faq h4,
+ .faq p {
+   font-size: .875em;
+   line-height: 1.125;
+ }
 
 
 
@@ -621,9 +710,25 @@ header {
   padding: 15px 0;
 }
 
+h2 {
+  font-size: 2.25em;
+}
+
+h3,
+h4 {
+  font-size: 1.875em;
+}
+
+p {
+  font-size: 1.125em;
+  line-height: 1.333;
+}
+
+
 /* Hero */
 
 .hero-area h1 {
+  font-size: 3.75em;
   width: 80%;
 }
 
@@ -648,8 +753,17 @@ aside .content-wrapper .form {
 }
 
 /* Reviews */
+
+.reviews h2 {
+  padding-bottom: 50px;
+}
+
 .reviews article div {
   width: 42%;
+}
+
+footer h4 {
+  font-size: 1.875em;
 }
 
 /* ==========================================================================
@@ -658,7 +772,12 @@ aside .content-wrapper .form {
    .mission h2,
    .contact-section .content-wrapper h2 {
        width: 95%;
+       font-size: 3em;
    }
+
+   .contact-content h4 {
+    font-size: 1.875em;
+  }
 
 /* ==========================================================================
   FAQ Page
@@ -666,6 +785,12 @@ aside .content-wrapper .form {
    .faq h2 {
        width: 100%;
    }
+
+  .faq h4,
+  .faq p {
+    font-size: 1.125em;
+    line-height: 1;
+  }
 
 /* ==========================================================================
    Print styles.
