--- a/css/main.css
+++ b/css/main.css
@@ -298,6 +298,11 @@ input[type=button] {
   background-size: cover;
 }
 
+.features i {
+	font-size: 3.75em;
+    margin-bottom: 40px;
+}
+
 .features h2 {
  margin-bottom: 60px;
 }
