--- a/css/main.css
+++ b/css/main.css
@@ -82,7 +82,17 @@ fieldset {
 textarea {
   resize: vertical;
 }
+/* ==========================================================================
+   Browser Upgrade Prompt
+   ========================================================================== */
 
+   .browserupgrade {
+    margin: 0.2em 0;
+    background: #ccc;
+    color: #000;
+    padding: 0.2em 0;
+  }
+  
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
@@ -97,6 +107,7 @@ body {
   font-size: 1em;
   color: #e2e3ed;
   text-align: left;
+  background-color: #202322;
  
 }
  
@@ -118,6 +129,7 @@ h2 {
  font-family: 'Poppins', sans-serif;
  font-size: 1.875em;
  font-weight: 500;
+ margin: 0;
 }
  
 h3, 
@@ -130,7 +142,7 @@ h4 {
  
 p {
   font-size: 0.875em;
-	line-height: 1.285em;
+	line-height: 1.285;
 }
  
 img { 
@@ -159,9 +171,6 @@ header {
     padding: 15px 0;  
 }
 
-header figure {
-  width: 60%;
-}
 
 header .content-wrapper {
   display: flex;
@@ -171,6 +180,9 @@ header .content-wrapper {
   margin: 0;
 }
 
+header figure {
+  width: 60%;
+}
 
 .header-divider {
   width: 100%;
@@ -206,16 +218,15 @@ footer {
 
 footer p {
   margin: 0;
+  padding-bottom: 50px;
 }
 
 footer .content-wrapper {
   width: 55%;
 }
 
-footer .social-icons {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+footer .contact {
+  margin-bottom: 50px;
 }
 
 footer .social-icons p {
@@ -224,21 +235,21 @@ footer .social-icons p {
   align-items: center;
 }
 
-footer .copyright {
- margin: 20px 0;
-  
-}
-
-.social-icons i {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  font-size: 21px;
+footer .social-icons p i {
+  font-size: 1.3125em;
   background-color: #527158;
   border-radius: 50%;
   width: 40px;
   height: 40px;
-  margin: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 20px;
+  
+}
+
+footer .copyright {
+ margin: 20px 0;
 }
 
 
@@ -251,7 +262,6 @@ footer .copyright {
   justify-content: center;
   background-image: url('../img/unplugged-retreat.jpg');
   background-size: cover;
-  background-repeat: no-repeat;
   background-position: center;
 }
 
@@ -269,8 +279,6 @@ aside {
   display: flex;
   justify-content: center;
   background-color: #527158;
-  color: #e2e3ed;
-
 }
 
 aside .form {
@@ -300,25 +308,20 @@ input[type=button] {
   text-transform: uppercase;
 }
 
-
 /* Features */
 
 .features {
   display: flex;
   justify-content: center; 
-  background: url('../img/unplugged-retreat-features.jpg') center no-repeat #333;
+  background: url('../img/unplugged-retreat-features.jpg');
   background-size: cover;
-}
-
-.features i {
-	font-size: 3.75em;
-    margin-bottom: 40px;
+  background-position: center;
 }
 
 .features h2 {
- margin-bottom: 60px;
-}
-
+  margin-bottom: 60px;
+ }
+ 
 .features article {
   width: 63%;
   margin: 30px 0;
@@ -327,8 +330,12 @@ input[type=button] {
 .features .features-items {
   display: flex;
   justify-content: center;
-  align-items: flex-start;
   flex-flow: row wrap;
+}
+
+.features i {
+	font-size: 3.75em;
+  margin-bottom: 40px;
 }
 
 .features p {
@@ -346,10 +353,6 @@ input[type=button] {
 
 }
 
-.reviews figure {
-  width: 100%;
-}
-
 .reviews h2 {
   margin-bottom: 40px;
   line-height: 1;
@@ -359,16 +362,6 @@ input[type=button] {
   width: 55%;
   margin: 20px 0;
 }
-
-
-
-.reviews article {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
 
 /*-----------------About Page Styles---------------------*/
 
